exercises/068 - NetworkPolicy/answer/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
    - name: client
      image: busybox:1.36
      command:
        - sh
        - -c
        - sleep 3600
